--- a/sections/RT-show.liquid
+++ b/sections/RT-show.liquid
@@ -311,7 +311,7 @@ sliderItems.forEach((slider) => {
   
 }
 </script>
-<script>
+<script type="load">
   $(document).ready(() => {
     document.querySelectorAll('.rtw-home').forEach(function(el) {
       const parent = el.closest('.shopify-section');
