--- a/sections/cart-items-drawer-ajax.liquid
+++ b/sections/cart-items-drawer-ajax.liquid
@@ -299,7 +299,7 @@
         <slider-component class="products carousel row no-padding suggested_card">
           <div class="carousel_slide column small-6 medium-6 carousel__slide">
             <div class="thumb_product cover_img">
-              <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-li="st" d-src="https://cdn.shopify.com/s/files/1/0605/8872/0370/files/new.png?v=1744047953">
+              <img alt="thumb-pro" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-li="st" d-src="https://cdn.shopify.com/s/files/1/0605/8872/0370/files/new.png?v=1744047953">
             </div>
             <a href="/collections/all">
               <span>Shop</span>
@@ -308,7 +308,7 @@
           </div>
           <div class="carousel_slide column small-6 medium-6 carousel__slide">
             <div class="thumb_product cover_img">
-              <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-li="st" d-src="https://cdn.shopify.com/s/files/1/0605/8872/0370/files/accessories.png?v=1744047954">
+              <img alt="thumb-pro" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-li="st" d-src="https://cdn.shopify.com/s/files/1/0605/8872/0370/files/accessories.png?v=1744047954">
             </div>
             <a href="/collections/accessories">
               <span>Shop</span>
@@ -317,7 +317,7 @@
           </div>
           <div class="carousel_slide column small-6 medium-6 carousel__slide">
             <div class="thumb_product cover_img">
-              <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-li="st" d-src="https://cdn.shopify.com/s/files/1/0605/8872/0370/files/new.png?v=1744047953">
+              <img alt="thumb-pro" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-li="st" d-src="https://cdn.shopify.com/s/files/1/0605/8872/0370/files/new.png?v=1744047953">
             </div>
             <a href="/collections/all">
               <span>Shop</span>
@@ -326,7 +326,7 @@
           </div>
           <div class="carousel_slide column small-6 medium-6 carousel__slide">
             <div class="thumb_product cover_img">
-              <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-li="st" d-src="https://cdn.shopify.com/s/files/1/0605/8872/0370/files/accessories.png?v=1744047954">
+              <img alt="thumb-pro" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-li="st" d-src="https://cdn.shopify.com/s/files/1/0605/8872/0370/files/accessories.png?v=1744047954">
             </div>
             <a href="/collections/accessories">
               <span>Shop</span>
@@ -334,10 +334,10 @@
             </a>
           </div>
           <div class="flickity-nav product-next flickity-prev" tabindex="0">
-            <img width="30" height="30" src="{{ 'arrow-left.svg' | asset_url }}">
+            <img width="30" height="30" alt="flick-pro" src="{{ 'arrow-left.svg' | asset_url }}">
           </div>
           <div class="flickity-nav product-prev flickity-next" tabindex="0">
-            <img width="30" height="30" src="{{ 'arrow-right.svg' | asset_url }}">
+            <img width="30" height="30" alt="flick-pro" src="{{ 'arrow-right.svg' | asset_url }}">
           </div>
         </slider-component>
       </div>
