--- a/sections/custom-main-collection-rtw-product-grid-available.liquid
+++ b/sections/custom-main-collection-rtw-product-grid-available.liquid
@@ -64,15 +64,16 @@
     #product-grid .price {
       color: #fff !important;
       font-weight: 600 !important;
-    } */
+    } 
     #product-grid .product-card .product-card-info {
-      margin-top: -46px;
+     margin-top: -46px;
       position: static;
       z-index: 9;
       padding: 10px 10px;
       margin-bottom: 6.5px;
-      flex-direction: row;
-    }
+      flex-direction: row; 
+      aaaa
+    }*/
     .promotion-column {
       grid-column: span 2;
       grid-row:var(--position);
