--- a/sections/custom-main-collection-rtw-product-grid.liquid
+++ b/sections/custom-main-collection-rtw-product-grid.liquid
@@ -48,7 +48,9 @@
       padding:16px;
     }
   @media(max-width:767px) {
-
+   .template-collection-custom-collection-rtw .product-card .product-card-info button.st-wishlist-button{
+    top:15px;
+    }
                  .submenu-list{
   grid-template-columns: repeat(2, minmax(0px, 1fr));
       display: grid;
