--- a/sections/custom-product-grid-2.liquid
+++ b/sections/custom-product-grid-2.liquid
@@ -65,14 +65,14 @@
       color: #fff !important;
       font-weight: 600 !important;
     } */
-    #product-grid .product-card .product-card-info {
+    {% comment %} .template-collection-custom-haute-couture-template #product-grid .product-card .product-card-info {
       margin-top: -46px;
       position: static;
       z-index: 9;
       padding: 10px 10px;
       margin-bottom: 6.5px;
       flex-direction: row;
-    }
+    } {% endcomment %}
     .promotion-column {
       grid-column: span 2;
       grid-row:var(--position);
