--- a/sections/main-page-bridal-home.liquid
+++ b/sections/main-page-bridal-home.liquid
@@ -198,7 +198,7 @@ $('.bridal-home .video-tab').first().addClass('active');
      updateTabIndicator();
    });
 </script>
-<script>
+<script type="load">
   $(document).ready(() => {
     updateSeasonContent();
     document.querySelectorAll('.bridal-home').forEach(function(el) {
