--- a/sections/main-page-es-bh.liquid
+++ b/sections/main-page-es-bh.liquid
@@ -366,7 +366,7 @@ sliderItems.forEach((slider) => {
 }
   
 </script>
-<script>
+<script type="load">
   $(document).ready(() => {
     document.querySelectorAll('.bridal-home').forEach(function(el) {
       const parent = el.closest('.shopify-section');
