--- a/sections/main-product-custom-design.liquid
+++ b/sections/main-product-custom-design.liquid
@@ -434,7 +434,7 @@
 </script> -->
 
 
-<script>
+<script type="load">
   const collection_handle = "{{ collection.handle }}";
 
   document.addEventListener("DOMContentLoaded", function () {
