--- a/sections/wishlist-tab.liquid
+++ b/sections/wishlist-tab.liquid
@@ -69,10 +69,10 @@
           <li class="nav-item carousel">
             <a class="nav-link column-3" data-bs-toggle="tab" data-bs-target="bridal" href="javascript:void(0);" >Bridal</a >
           </li>
-          <div class="slide-btn flickity-nav flickity-prev" tabindex="0">
+          <div class="slide-btn flickity-nav flickity-prev" aria-label="flick-prev" tabindex="0">
             {%- render 'svg-icons' with 'arrow-left' -%}
           </div>
-          <div class="slide-btn flickity-nav flickity-next" tabindex="0">
+          <div class="slide-btn flickity-nav flickity-next" aria-label="flick-next" tabindex="0">
             {%- render 'svg-icons' with 'arrow-right' -%}
           </div>
         </tab-component>
