--- a/snippets/header-mobile-toggle.liquid
+++ b/snippets/header-mobile-toggle.liquid
@@ -139,7 +139,7 @@
   <div class="Overlay_overlay"></div>
 </div>
 <a class="thb-secondary-area-item d-none" href="{{ routes.search_url }}" title="{{ 'sections.header.search' | t }}">
-  <img class="icon-item" width="20" height="20" src="{{ '8.png' | asset_url }}">
+  <img class="icon-item" width="20" height="20" alt="iconimg" src="{{ '8.png' | asset_url }}">
 </a>
 
 <script>
