--- a/snippets/slideshow-arrows.liquid
+++ b/snippets/slideshow-arrows.liquid
@@ -1,2 +1,2 @@
-<button type="button" class="flickity-nav flickity-prev" tabindex="0">{%- render 'svg-icons' with 'arrow-left' -%}</button>
-<button type="button" class="flickity-nav flickity-next" tabindex="0">{%- render 'svg-icons' with 'arrow-right' -%}</button>
+<button type="button" class="flickity-nav flickity-prev" aria-label="flick-prev" tabindex="0">{%- render 'svg-icons' with 'arrow-left' -%}</button>
+<button type="button" class="flickity-nav flickity-next" aria-label="flick-next" tabindex="0">{%- render 'svg-icons' with 'arrow-right' -%}</button>
