--- a/sections/custom-main-collection-product-grid.liquid
+++ b/sections/custom-main-collection-product-grid.liquid
@@ -43,7 +43,9 @@
 }
   @media(max-width:767px) {
 
-
+.template-collection-custom-collection .submenu-list{
+padding-top:0 !important;
+}
         .submenu-list{
 grid-template-columns: repeat(2, minmax(0px, 1fr));
     display: grid;
@@ -60,6 +62,9 @@ grid-template-columns: repeat(2, minmax(0px, 1fr));
     #product-grid .price {
       color: #fff !important;
       font-weight: 600 !important;
+    }
+    body.template-collection-custom-collection .product-card .product-card-info button.st-wishlist-button{
+    top:15px;
     }
     #product-grid .product-card .product-card-info {
       margin-top: -46px;
