--- a/sections/policy-section.liquid
+++ b/sections/policy-section.liquid
@@ -40,10 +40,10 @@
           </a>
         </li>
         {% endfor %}
-        <div class="slide-btn flickity-nav flickity-prev" tabindex="0">
+        <div class="slide-btn flickity-nav flickity-prev" aria-label="flick-prev" tabindex="0">
           {%- render 'svg-icons' with 'arrow-left' -%}
         </div>
-        <div class="slide-btn flickity-nav flickity-next" tabindex="0">
+        <div class="slide-btn flickity-nav flickity-next" aria-label="flick-next" tabindex="0">
           {%- render 'svg-icons' with 'arrow-right' -%}
         </div>
       </tab-component>
