--- a/snippets/header-secondary-area.liquid
+++ b/snippets/header-secondary-area.liquid
@@ -17,19 +17,19 @@
 	</div>
 	{%- endunless -%}
     {% endif %}
-  	<a data-tb="#search" class="cart_popup thb-secondary-area-item m-none" href="javascript:void(0)" title="{{ 'sections.header.search' | t }}"><span class="thb-secondary-item-icon"><img class="icon-item" width="20" height="20" src="{{ '8.png' | asset_url }}"></span></a>
+  	<a data-tb="#search" class="cart_popup thb-secondary-area-item m-none" href="javascript:void(0)" title="{{ 'sections.header.search' | t }}"><span class="thb-secondary-item-icon"><img class="icon-item" alt="iconitem" width="20" height="20" src="{{ '8.png' | asset_url }}"></span></a>
     {% if section.settings.wishlist %}
       <a data-tb="#wishlist" class="cart_popup thb-secondary-area-item custom_list" href="javascript:void(0)">
-        <button class="st-wishlist-details-button st-wishlist-details-button--header-icon" data-type="manually"></button>
+        <button class="st-wishlist-details-button st-wishlist-details-button--header-icon" aria-label="wishlist" data-type="manually"></button>
       </a>
     {% endif %}
 	{%- if shop.customer_accounts_enabled -%}
-      <a data-tb="#login_account" class="cart_popup thb-secondary-area-item thb-secondary-myaccount thb-secondary-myaccount--icon-{{ use_icon_account }}" href="javascript:void(0)" title="{{ 'sections.header.my_account' | t }}"><span class="thb-secondary-item-icon">{% if section.settings.use_icon_account %}  <img class="icon-item" width="20" height="20" src="{{ '10.png' | asset_url }}">{% else %}{{ profile_text }}{% endif %}</span></a>
+      <a data-tb="#login_account" class="cart_popup thb-secondary-area-item thb-secondary-myaccount thb-secondary-myaccount--icon-{{ use_icon_account }}" href="javascript:void(0)" title="{{ 'sections.header.my_account' | t }}"><span class="thb-secondary-item-icon">{% if section.settings.use_icon_account %}  <img class="icon-item" alt="icon" width="20" height="20" src="{{ '10.png' | asset_url }}">{% else %}{{ profile_text }}{% endif %}</span></a>
     {%- endif -%}
     <div data-tb="#cart-tabs" class="cart_popup thb-secondary-area-item">
       <a href="{{ routes.cart_url }}" id="cart-drawer-toggle" class="thb-secondary-cart" >
         <div class="thb-secondary-item-icon">
-          <img class="icon-item" width="18" height="18" src="{{ 'wishlist.svg' | asset_url }}">
+          <img class="icon-item" width="18" height="18" alt="icon" src="{{ 'wishlist.svg' | asset_url }}">
           <span id="cartcount" class="thb-item-count">{%- if cart.item_count > 99 -%}{%- render 'svg-icons' with 'thb-asterisk' -%}{%- else -%}<span data-count="{{ cart.item_count }}">{{ cart.item_count }}</span>{%- endif -%}</span>
         </div>
         <span class="cart_message">Item added to bag</span>
